character-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: character
  labels:
    app: character
    kind: chatbox-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: character
  template:
    metadata:
      labels:
        app: character
    spec:
      containers:
      - env:
            - name: DOTNET_ENVIRONMENT
              value: Production
            - name: Logging__LogLevel__Microsoft.AspNetCore
              value: trace
        name: character-api
        image: martijnd95/chatbox-characterservice:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
