chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
    kind: chatbox-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - env:
            - name: DOTNET_ENVIRONMENT
              value: Production
            - name: Logging__LogLevel__Microsoft.AspNetCore
              value: trace
            - name: RabbitMqConfiguration__HostName
              value: hello-world
            - name: RabbitMqConfiguration__Username
              valueFrom:
                secretKeyRef:
                  name: hello-world-default-user
                  key: username
            - name: RabbitMqConfiguration__Password
              valueFrom:
                secretKeyRef:
                  name: hello-world-default-user
                  key: password
            - name: RabbitMqConfiguration__VirtualHost
              value: /
        name: chat-api
        image: martijnd95/chatbox-chatservice:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
