rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/chatbox-backend-default: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - command:
            - bash
            - -c
            - rabbitmq-plugins enable --offline rabbitmq_management && rabbitmq-server
          image: rabbitmq:3.11.26-management
          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - ping
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          name: rabbitmq
          ports:
            - containerPort: 15672
              hostPort: 8081
              protocol: TCP
            - containerPort: 5672
              hostPort: 5672
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /etc/rabbitmq
              name: rabbitmq-claim0
      restartPolicy: Always
      volumes:
        - name: rabbitmq-claim0
          persistentVolumeClaim:
            claimName: rabbitmq-claim0
status: {}
